# arty-farty

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.secrets.toml  example.settings.toml  pyproject.toml  settings.toml
.github/workflows/: docker.yml
artyfarty/: __main__.py  config.py  replicate_api.py  utils.py
artyfarty/generators/: replicate.py
artyfarty/inputs/: openwebif.py
etc/: artyfarty.service  artyfarty.timer
